css/style.css
/* ... */
#slider .ui-slider-handle {
    border-radius: 50%;
    background: #4ed2d3;
    border: 0;
    top: -8px;
    width: 20px;
    height: 20px;
    cursor: -webkit-grab;
}

.cost {
    width: 170px;
    height: 40px;
    line-height: 40px;
    font-weight: bolder;
    right: 0;
    top: 0;
    color: #4ed4d3;
    font-size: 29px;
    letter-spacing: -.5px;
}

.cost:before {
    content: '$';
    margin-right: -5px;
}

.cost:after {
    content: '元';
    color: #000;
    font-size: 15px;
    margin-left: -4px;
    vertical-align: middle;
}

.interest {
    padding: 0 20px;
    margin: 20px 0;
}

.interest li {
    margin: 10px 0 35px;
    display: inline-block;
    line-height: 45px;
    width: 100%;
    min-height: 45px;
}

.trans50 {
    width: 80%;
    margin: 0;
    max-width: 560px;
    float: left;
}

.tri {
    position: relative;
    width: 100%;
    height: 100%;
    margin: 25px 0 0 60px;
}

.find_item {
    margin: 15px 1%;
    width: 31.33%;
    padding: 20px;
    box-sizing: border-box;
    line-height: 1.5;
    text-align: left;
}

.fund_detail {
    line-height: 2;
}

.fund_detail li span:first-child {
    max-width: 145px;
    display: inline-block;
    width: 50%;
    float: left;
}

.fund_detail li span:last-child {
    width: 50%;
    display: inline-block;
    float: left;
}

font.Y1:before {
    content: "Y1: ";
}

font.Y2:before {
    content: "Y2: ";
}

font.Y3:before {
    content: "Y3: ";
}

.find_item h5 .f_grey {
    padding-left: 10px;
    opacity: .6;
}

.find_item .f_orange {
    display: none;
}

.find_item .btn_green {
    display: inline-block;
    text-align: center;
    width: 80px;
    margin: 20px 5px 10px;
    padding: 0;
    line-height: 35px;
    height: 35px;
}

.find_item h5 {
    display: block;
    height: 110px;
}

.years,
.money {
    padding: 10px 20px;
    background: rgba(221, 246, 246, 0.29);
    font-weight: bold;
}

.formula {
    line-height: 40px;
    margin: 20px auto;
}

.analysis_result {
    /* display: none; */
}

.formula p {
    line-height: 40px;
    vertical-align: middle;
}

#result {
    padding: 65px 0 260px;
    display: none;
    margin-top: -150px;
}

#result.show {
    display: block;
    margin-top: -180px;
}

#attention {
    padding: 65px 0;
}

#analysis {
    padding: 65px 0 0;
    overflow-x: hidden;
    padding: 95px 0 0;
}

#analysis .btn_wrapper {
    /* position: absolute; */
    /* margin-top: -211px; */
    /* bottom: 75px; */
    display: inline-block;
    /* left: 50%; */
    /* margin-left: -130px; */
    margin: 20px auto 80px;
}

.re_ana {
    display: none;
}

.show .re_ana {
    display: block;
}

.show .ana {
    display: none;
}

#analysis .btn_wrapper a {
    margin-bottom: 15px;
    width: 250px;
    padding: 0;
    display: block;
}

#analysis>p {
    line-height: 1.6;
    padding-bottom: 25px;
    padding: 0 20px 25px 20px;
}

#weapon {
    text-align: center;
    padding: 95px 0;
}

#weapon h2 {
    margin-bottom: 110px;
}

.weapon5 {
    margin: 20px auto;
    display: inline-block;
    padding: 0 3%;
}

.weapon5 li {
    width: 20%;
    float: left;
    padding: 40px 0;
    box-sizing: border-box;
}

.weapon5 li h5 {
    padding: 6px 0;
    white-space: nowrap;
}

.weapon5 li span {
    line-height: 1.5;
    padding: 4px 0;
    width: 120%;
    display: inline-block;
    margin-left: -10%;
}

.text_bottom .icon_wrap {
    border: 10px solid #6cc;
    border-radius: 50%;
    width: 150px;
    padding: 10px;
    box-sizing: border-box;
    margin: 50px auto 65px;
    position: relative;
}

.text_bottom .icon_wrap::before {
    content: "";
    display: block;
    background-color: #6cc;
    width: 6px;
    height: 40px;
    position: absolute;
    top: 140px;
    left: 50%;
    margin-left: -3px;
}

.text_bottom .icon_wrap::after {
    content: "";
    display: block;
    background-color: #6cc;
    position: absolute;
    width: 14px;
    height: 14px;
    border-radius: 50%;
    top: 170px;
    left: 50%;
    margin-left: -7px;
}

.text_top .icon_wrap {
    border: 10px solid #66cd99;
    border-radius: 50%;
    width: 150px;
    padding: 10px;
    box-sizing: border-box;
    margin: 50px auto;
    position: relative;
}

.text_top .icon_wrap::before {
    content: "";
    display: block;
    background-color: #65ce99;
    width: 6px;
    height: 40px;
    position: absolute;
    top: -49px;
    left: 50%;
    margin-left: -3px;
}

.text_top .icon_wrap::after {
    content: "";
    display: block;
    background-color: #65ce99;
    position: absolute;
    width: 14px;
    height: 14px;
    border-radius: 50%;
    top: -56px;
    left: 50%;
    margin-left: -7px;
}

.text_top .text_detail {
    transform: translate(0, -359px);
}

.twentytwenty-wrapper {
    height: 100%;
}

.go_formula {
    position: fixed;
    width: 100px;
    height: 100px;
    right: 25px;
    bottom: 25px;
    border-radius: 50%;
    text-align: center;
    padding-top: 20px;
    cursor: pointer;
    z-index: 150;
    overflow: hidden;
}

.go_formula:after {
    content: "";
    background: #00a3a1;
    position: absolute;
    display: block;
    width: 100%;
    height: 100%;
    top: -100%;
    transition: all 0.2s;
}

.go_formula .f_yellow {
    margin-top: -3px;
    margin-left: 2px;
    font-size: 40px;
}

.go_formula>p {
    position: relative;
    z-index: 155;
}

#footer {
    padding: 20px;
    text-align: center;
}

#sub_kv {
    height: 330px;
    background-image: url(../images/bg_02.jpg);
    background-size: cover;
    background-position: center;
    margin-top: 63px;
    box-sizing: content-box;
}

#funds_area {
    text-align: center;
    background: #dcf6f6;
    padding: 0 0 75px;
}

#funds_area>div>p {
    padding-left: 1%;
}

.filter {
    background: #dcf6f6;
    padding-top: 55px;
}

.filter .select_wrapper {
    width: 230px;
    margin: 0 1% 30px;
}

.select_wrapper.poA {
    position: absolute;
    left: 50%;
    margin-left: -115px;
}

.filter select {
    width: 100%;
    font-size: 15px;
}
/* ... */

